--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -3,3 +3,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  /* .parent-grid {
+    display: grid;
+    grid-template-columns: 450px 1fr;
+    gap: 1rem;
+  } */
+  /* .second-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 2rem;
+  }
+
+  .div1 {
+    grid-area: 1 / 1 / 2 / 3;
+  }
+  .div2 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  .div3 {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+  .div4 {
+    grid-area: 3 / 1 / 4 / 2;
+  }
+  .div5 {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+  .div6 {
+    grid-area: 4 / 1 / 5 / 2;
+  }
+  .div7 {
+    grid-area: 4 / 2 / 5 / 3;
+  } */
+}
