--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -8,5 +8,152 @@
   ::selection {
     background: #00b0ff;
   }
+  @media screen and (min-width: 800px) {
+    .navigation_checkbox,.navigation_background,.navigation_button {
+      display: none;
+    }
+    
+    .navigation{
+      margin: 25px 25px 10px 25px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+   
+    .navigation_list{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 24px;
+      list-style: none;
+    }
+  }
+  
+  
+  
+  @media screen and (max-width: 800px) {
+    .navigation_checkbox,.login-btn {
+      display: none;
+    }
+    .navigation_button {
+      background-color: #fff;
+      height: 4rem;
+      width: 4rem;
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      border-radius: 50%;
+      z-index: 2000;
+      box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+    }
+    .navigation_background {
+      height: 4rem;
+      width: 4rem;
+      border-radius: 50%;
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      background-image: radial-gradient(#00b0ff, #ccefff);
+      z-index: 1000;
+      transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+      cursor: pointer;
+    }
+    .navigation_nav {
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 1500;
+      opacity: 0;
+      width: 0;
+      transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    }
+    .navigation_list {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      list-style: none;
+      text-align: center;
+      width: 100%;
+    }
+    .navigation_item {
+      margin: 1rem;
+    }
+    .navigation_link,
+    .navigation_link:link,
+    .navigation_link:visited {
+      font-size: 3rem;
+      font-weight: 300;
+      padding: 1rem 2rem;
+      color: #fff;
+      text-decoration: none;
+      text-transform: uppercase;
+      background-image: linear-gradient(
+        120deg,
+        transparent 0%,
+        transparent 50%,
+        #fff 50%
+      );
+      background-size: 224%;
+      transition: all 0.4s;
+      display: inline-block;
+    }
+    .navigation_link:hover,
+    .navigation_link:active {
+      background-position: 100%;
+      color: #00b0ff;
+      transform: translateX(1rem);
+    }
+    .navigation_checkbox:checked ~ .navigation_background {
+      transform: scale(80);
+    }
+    .navigation_checkbox:checked ~ .navigation_nav {
+      opacity: 1;
+      width: 100%;
+    }
+    .navigation_icon,
+    .navigation_icon::before,
+    .navigation_icon::after {
+      width: 2rem;
+      height: 2px;
+      background-color: #333;
+      position: absolute;
+      display: inline-block;
+      left: 13.5px;
+      top: 31px;
+    }
+    .navigation_icon::before,
+    .navigation_icon::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      transition: all 0.2s;
+    }
+    .navigation_icon::before {
+      top: -0.8rem;
+    }
+    .navigation_icon::after {
+      top: 0.8rem;
+    }
+    .navigation_button:hover .navigation_icon::before {
+      top: -1rem;
+    }
+    .navigation_button:hover .navigation_icon::after {
+      top: 1rem;
+    }
+    .navigation_checkbox:checked + .navigation_button .navigation_icon {
+      background-color: transparent;
+    }
+    .navigation_checkbox:checked + .navigation_button .navigation_icon::before {
+      top: 0;
+      transform: rotate(135deg);
+    }
+    .navigation_checkbox:checked + .navigation_button .navigation_icon::after {
+      top: 0;
+      transform: rotate(-135deg);
+    }
+    
+  }
   
 }
